CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT (grid_demo)
SET (CMAKE_CXX_STANDARD 14)

INCLUDE_DIRECTORIES ("${PROJECT_BINARY_DIR}")
STRING (REPLACE "/" "\\" LOCAL_SOURCE_DIR "${PROJECT_SOURCE_DIR}")

FILE (GLOB_RECURSE GRID_DEMO_SRC
	"${PROJECT_SOURCE_DIR}/grid_dispatcher.h"
	"${PROJECT_SOURCE_DIR}/demo.cpp"
)

FOREACH (FILE ${GRID_DEMO_SRC}) 
	GET_FILENAME_COMPONENT(PARENT_DIR "${FILE}" PATH)

	# skip src or include and changes /'s to \\'s
	STRING(REGEX REPLACE "(\\./)?(src|include)/?" "" GROUP "${PARENT_DIR}")
	STRING(REPLACE "/" "\\" GROUP "${GROUP}")
	STRING(REPLACE "${LOCAL_SOURCE_DIR}" "" GROUP "${GROUP}")
	SOURCE_GROUP("${GROUP}" FILES "${FILE}")
ENDFOREACH (FILE ${GRID_DEMO_SRC})

ADD_EXECUTABLE (grid_demo ${GRID_DEMO_SRC})

IF (NOT MSVC)
	TARGET_LINK_LIBRARIES(grid_demo m stdc++ pthread)
ENDIF (NOT MSVC)
